--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -11,6 +11,12 @@
     </head>
 
     <body>
+      <div class="container">
+        <!-- Page Content goes here -->
+        <% recipes.forEach(recipe => { %>
+          <div class="col s4">recipe.name</div>
+        })
+      </div>
 
       <!--JavaScript at end of body for optimized loading-->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
