--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -1,17 +1,15 @@
 <html>
     <head>
       <title>MunchieMatcher</title>
-      <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-
-      <!--Let browser know website is optimized for mobile-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.4/css/selectize.default.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
       <div class="container">
+        <input type="text" id="recipeSearch" />
         <!-- Page Content goes here -->
         <% recipes.forEach(recipe => { %>
           <div class="col s4">recipe.name</div>
@@ -19,6 +17,12 @@
       </div>
 
       <!--JavaScript at end of body for optimized loading-->
+      <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.4/js/selectize.js"></script>
+      <script src="js/recipes.js"></script>
     </body>
 </html>
