--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -3,33 +3,96 @@
       <title>MunchieMatcher</title>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.4/css/selectize.default.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
       <div class="container">
-        <div class="col s12">
-          <!-- tag search -->
-          <select id="recipeSearch" placeholder="Select some tags...">
-            <% tags.forEach(tag => { %>
-              <option value=<%- tag %> ><%- tag %></option>
-            <% }) %>
-
-        </div>
         <!-- Page Content goes here -->
         <% recipes.forEach(recipe => { %>
           <div class="col s4">recipe.name</div>
         <% }) %>
       </div>
 
+      <!-- Add recipe form -->
+      <form action="recipes" method="post" autocomplete="off">
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="name" type="text"  name="name" class="validate">
+            <label for="name">Recipe Name</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s3">
+            <input id="prepTime" type="time" name="prepTime" class="validate">
+            <label for="prepTime">Prep Time (Minutes)</label>
+          </div>
+          <div class="input-field col s3">
+            <input id="cookTime" type="time" name="cookTime" class="validate">
+            <label for="cookTime">Cook Time (Minutes)</label>
+          </div>
+          <div class="input-field col s3">
+            <input id="numServings" type="time" name="numServings" class="validate">
+            <label for="numServings">Number of servings</label>
+          </div>
+          <div class="input-field col s3">
+            <input id="cost" type="number" name="cost" class="validate">
+            <label for="cost">Cost (AUD)</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s2">
+            <input id="qty" type="number" name="qty[0][quantity]" class="validate">
+            <label for="qty">Quantity</label>
+          </div>
+          <div class="input-field col s2">
+            <select id="unit" name="unit[0][unit]">
+              <optgroup label="Weight">
+                <option value="mg">Milligram</option>
+                <option value="g">Grams</option>
+                <option value="Kg">Kilograms</option>
+              </optgroup>
+              <optgroup label="Volume">
+                <option value="ml">Millilitre</option>
+                <option value="l">Litre</option>
+                <option value="tbsp">Tablespoon</option>
+                <option value="tsp">Teaspoon</option>
+                <option valuie="cup">Cup</option>
+              </optgroup>
+            <label for="unit">Unit</label>
+          </div>
+          <div class="input-field col s8">
+            <input id="ingredient" type="text" name="ingredient[0][name]" class="validate">
+            <label for="ingredient">Ingredient</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <textarea id="method" name="method[0]" class="materialize-textarea"></textarea>
+            <label for="method">Method</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12">
+            <div class="chips chips-autocomplete"></div>
+          </div>
+        </div>
       <!--JavaScript at end of body for optimized loading-->
       <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.4/js/standalone/selectize.js"></script>
       <script src="js/recipes.js"></script>
+      <script>
+      var tags = <%- JSON.stringify(tags) %>
+      $('.chips-autocomplete').chips({
+       autocompleteOptions: {
+         data: tags,
+         limit: Infinity,
+         minLength: 1
+       }
+     });
+     </script>
     </body>
 </html>
