--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -15,7 +15,7 @@
       </div>
 
       <!-- Add recipe form -->
-      <form action="recipes" method="post" autocomplete="off">
+      <form action="recipes" method="post" id="addRecipe" autocomplete="off">
         <div class="row">
           <div class="input-field col s12">
             <input id="name" type="text"  name="name" class="validate">
@@ -24,15 +24,15 @@
         </div>
         <div class="row">
           <div class="input-field col s3">
-            <input id="prepTime" type="time" name="prepTime" class="validate">
+            <input id="prepTime" type="number" name="prepTime" class="validate">
             <label for="prepTime">Prep Time (Minutes)</label>
           </div>
           <div class="input-field col s3">
-            <input id="cookTime" type="time" name="cookTime" class="validate">
+            <input id="cookTime" type="number" name="cookTime" class="validate">
             <label for="cookTime">Cook Time (Minutes)</label>
           </div>
           <div class="input-field col s3">
-            <input id="numServings" type="time" name="numServings" class="validate">
+            <input id="numServings" type="number" name="numServings" class="validate">
             <label for="numServings">Number of servings</label>
           </div>
           <div class="input-field col s3">
@@ -40,36 +40,47 @@
             <label for="cost">Cost (AUD)</label>
           </div>
         </div>
-        <div class="row">
-          <div class="input-field col s2">
-            <input id="qty" type="number" name="qty[0][quantity]" class="validate">
-            <label for="qty">Quantity</label>
-          </div>
-          <div class="input-field col s2">
-            <select id="unit" name="unit[0][unit]">
-              <optgroup label="Weight">
-                <option value="mg">Milligram</option>
-                <option value="g">Grams</option>
-                <option value="Kg">Kilograms</option>
-              </optgroup>
-              <optgroup label="Volume">
-                <option value="ml">Millilitre</option>
-                <option value="l">Litre</option>
-                <option value="tbsp">Tablespoon</option>
-                <option value="tsp">Teaspoon</option>
-                <option valuie="cup">Cup</option>
-              </optgroup>
-            <label for="unit">Unit</label>
-          </div>
-          <div class="input-field col s8">
-            <input id="ingredient" type="text" name="ingredient[0][name]" class="validate">
-            <label for="ingredient">Ingredient</label>
+        <div class="col s2">
+          <h6>Ingredients <i class="material-icons" id="addIngredient">add_circle</i></h6>
+        </div>
+        <div id="ingredients">
+          <div class="row ingredientRow">
+            <div class="input-field col s2">
+              <input id="qty0" type="number" name="ingredients[0][quantity]" class="validate">
+              <label for="qty0">Quantity</label>
+            </div>
+            <div class="input-field col s2">
+              <select id="unit0" name="ingredients[0][unit]">
+                <optgroup label="Weight">
+                  <option value="mg">Milligram</option>
+                  <option value="g">Grams</option>
+                  <option value="Kg">Kilograms</option>
+                </optgroup>
+                <optgroup label="Volume">
+                  <option value="ml">Millilitre</option>
+                  <option value="l">Litre</option>
+                  <option value="tbsp">Tablespoon</option>
+                  <option value="tsp">Teaspoon</option>
+                  <option valuie="cup">Cup</option>
+                </optgroup>
+                <label for="unit0">Unit</label>
+              </select>
+            </div>
+            <div class="input-field col s8">
+              <input id="ingredient0" type="text" name="ingredients[0][name]" class="validate">
+              <label for="ingredient0">Ingredient</label>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="input-field col s12">
-            <textarea id="method" name="method[0]" class="materialize-textarea"></textarea>
-            <label for="method">Method</label>
+        <div class="col s2">
+          <h6>Method <i class="material-icons" id="addMethod">add_circle</i></h6>
+        </div>
+        <div id="method">
+          <div class="row methodRow">
+            <div class="input-field col s12">
+              <textarea id="method0" name="method[0]" class="materialize-textarea"></textarea>
+              <label for="method0">Step 1</label>
+            </div>
           </div>
         </div>
         <div class="row">
@@ -77,6 +88,10 @@
             <div class="chips chips-autocomplete"></div>
           </div>
         </div>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+          <i class="material-icons right">send</i>
+        </button>
+      </form>
       <!--JavaScript at end of body for optimized loading-->
       <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -87,10 +102,12 @@
       <script>
       var tags = <%- JSON.stringify(tags) %>
       $('.chips-autocomplete').chips({
-       autocompleteOptions: {
-         data: tags,
-         limit: Infinity,
-         minLength: 1
+        placeholder: 'Enter tags',
+        secondaryPlaceholder: '+tag',
+        autocompleteOptions: {
+          data: tags,
+          limit: Infinity,
+          minLength: 1
        }
      });
      </script>
