--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -3,6 +3,7 @@
       <title>MunchieMatcher</title>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+      <link rel="stylesheet" href="css/nouislider.min.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -20,6 +21,17 @@
               </div>
             </div>
           </div>
+          <ul class="collapsible">
+            <li>
+              <div class="collapsible-header"><i class="material-icons">filter_list</i>Filter</div>
+              <div class="collapsible-body">
+                <div id="timeSlider" class="filterSlider" style="margin-top: 2%"></div>
+                <label for="timeSlider">Time (minutes)</label>
+                <div id="costSlider" class="filterSlider" style="margin-top: 4%"></div>
+                <label for="costSlider">Cost (AUD)</label>
+              </div>
+            </li>
+          </ul>
 
           <ul>
           <% recipes.forEach((recipe, count) => { %>
@@ -37,7 +49,9 @@
                     <span class="card-title"><%- recipe.name %></span>
                   </div>
                   <div class="card-content">
-                    <p><i class="material-icons">av_timer</i><%- `${recipe.prepTime + recipe.cookTime}` %> <i class="material-icons">person</i><%- recipe.numServings %> <i class="material-icons">attach_money</i><%- recipe.cost %></p>
+                    <p><i class="material-icons">av_timer</i><span class="cookTime"><%- `${recipe.prepTime + recipe.cookTime}` %></span>
+                       <i class="material-icons">person</i><span class="numServings"><%- recipe.numServings %></span>
+                       <i class="material-icons">attach_money</i><span class="recipeCost"><%- recipe.cost %></p></span>
                   </div>
                   <div class="card-action">
                     <a class="waves-effect waves-light btn" href=<%- `recipes/${recipe.urlName}` %> >View Recipe</a>
@@ -148,6 +162,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
       <script src="js/recipes.js"></script>
       <script src="js/list.min.js"></script>
+      <script src="js/nouislider.min.js"></script>
       <script>
       var tags = <%- JSON.stringify(tags) %>
       $('.chips-autocomplete').chips({
