Filterable on number of servings

--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -27,8 +27,12 @@
               <div class="collapsible-body">
                 <div id="timeSlider" class="filterSlider" style="margin-top: 2%"></div>
                 <label for="timeSlider">Time (minutes)</label>
+
                 <div id="costSlider" class="filterSlider" style="margin-top: 4%"></div>
                 <label for="costSlider">Cost (AUD)</label>
+
+                <div id="servingsSlider" class="filterSlider" style="margin-top: 4%"></div>
+                <label for="servingsSlider">Number of servings</label>
               </div>
             </li>
           </ul>
@@ -41,7 +45,7 @@
               <% } %>
               <div class="row list">
             <% } %>
-            <div class="col s4">
+            <div class="col s12 m4">
               <li>
                 <div class="card small">
                   <div class="card-image">
