Center icons/text

--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -53,7 +53,7 @@
                     <span class="card-title"><%- recipe.name %></span>
                   </div>
                   <div class="card-content">
-                    <p><i class="material-icons">av_timer</i><span class="cookTime"><%- `${recipe.prepTime + recipe.cookTime}` %></span>
+                    <p class="valign-wrapper"><i class="material-icons">av_timer</i><span class="cookTime"><%- `${recipe.prepTime + recipe.cookTime}` %></span>
                        <i class="material-icons">person</i><span class="numServings"><%- recipe.numServings %></span>
                        <i class="material-icons">attach_money</i><span class="recipeCost"><%- recipe.cost %></p></span>
                   </div>
