--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -20,13 +20,13 @@
         </div>
         <div class="row">
           <div class="col s4">
-            <p class="center-align"><i class="material-icons">av_timer</i><%- `${recipe.prepTime + recipe.cookTime}` %></p>
+            <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">av_timer</i><%- `${recipe.prepTime + recipe.cookTime}` %></p>
           </div>
           <div class="col s4">
-            <p class="center-align"><i class="material-icons">person</i><%- recipe.numServings %></p>
+            <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">person</i><%- recipe.numServings %></p>
           </div>
           <div class="col s4">
-            <p class="center-align"><i class="material-icons">attach_money</i><%- recipe.cost %></p>
+            <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">attach_money</i><%- recipe.cost %></p>
           </div>
         </div>
         <div class="row">
@@ -35,7 +35,11 @@
               <ul class="collection">
               <% recipe.ingredients.forEach(ingredient => { %>
                 <li class="collection-item">
-                  <p><%- `${ingredient.quantity} ${ingredient.unit} ${ingredient.name}` %>
+                  <% if (ingredient.unit !== "count") { %>
+                    <p><%- `${ingredient.quantity} ${ingredient.unit} ${ingredient.name}` %>
+                  <% } else { %>
+                    <p><%- `${ingredient.quantity} ${ingredient.name}` %>
+                  <% } %>
                 </li>
               <% }) %>
               </ul>
