--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -4,6 +4,7 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
       <link rel="stylesheet" href="css/nouislider.min.css">
+      <link rel="stylesheet" href="css/recipes.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
@@ -15,7 +16,7 @@
           <div class="row nav-wrapper">
             <div class="col s12">
               <div class="input-field">
-                <input id="search" type="search" class="search" placeholder="Search by name or tags" required>
+                <input id="search" type="search" class="search" placeholder="Search for a recipe!" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                 <i class="material-icons">close</i>
               </div>
@@ -33,6 +34,8 @@
 
                 <div id="servingsSlider" class="filterSlider" style="margin-top: 4%"></div>
                 <label for="servingsSlider">Number of servings</label>
+
+                <div id="tagSearch" class="chips tagSearchChips"></div>
               </div>
             </li>
           </ul>
@@ -60,9 +63,12 @@
                   <div class="card-action">
                     <a class="waves-effect waves-light btn" href=<%- `recipes/${recipe.urlName}` %> >View Recipe</a>
                   </div>
-                  <% recipe.tags.forEach(tag => { %>
-                    <div class="tags"><%- tag %></div>
-                  <% }) %>
+                  <% for (let count=0; count<50; count++) {%>
+                    <% if (count > recipe.tags.size) { %>
+                      <div class=<%- "tags"+count %> >""</div>
+                    <% } else { %>
+                    <div class=<%- `tags${count}` %> ><%- recipe.tags[count] %></div>
+                  <% }} %>
                 </div>
               </li>
             </div>
@@ -151,7 +157,7 @@
         </div>
         <div class="row">
           <div class="col s12">
-            <div class="chips chips-autocomplete"></div>
+            <div class="chips recipeSubmitChips"></div>
           </div>
         </div>
         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
@@ -169,7 +175,7 @@
       <script src="js/nouislider.min.js"></script>
       <script>
       var tags = <%- JSON.stringify(tags) %>
-      $('.chips-autocomplete').chips({
+      $('.recipeSubmitChips').chips({
         placeholder: 'Enter tags',
         secondaryPlaceholder: '+tag',
         autocompleteOptions: {
@@ -178,6 +184,16 @@
           minLength: 1
        }
      });
+     $('.tagSearchChips').chips({
+       placeholder: 'Enter tags',
+       secondaryPlaceholder: '+tag',
+       autocompleteOptions: {
+         data: tags,
+         limit: 50
+         //On chip add is set in recipes.js
+      },
+      limit: 50
+    });
      </script>
     </body>
 </html>
