--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -14,23 +14,72 @@
       <%- include('navbar.ejs') %>
       <div class="container">
         <div class="row">
-          <div class="col s12 center-align">
-            <img class="responsive-img" src=<%- recipe.image %> />
+          <div class="col s8 offset-s2 center-align">
+            <div class="card">
+              <div class="card-image">
+                <img class="responsive-img" src=<%- recipe.image %> />
+              </div>
+              <div class="card-content">
+                <h1 class="flow-text"><%- recipe.name %></h1>
+                <div class="row">
+                  <div class="col s4">
+                    <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">av_timer</i><%- `${recipe.prepTime + recipe.cookTime}` %></p>
+                  </div>
+                  <div class="col s4">
+                    <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">person</i><%- recipe.numServings %></p>
+                  </div>
+                  <div class="col s4">
+                    <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">attach_money</i><%- recipe.cost %></p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <ul class="collapsible hide-on-med-and-up">
+          <li>
+            <div class="collapsible-header"><i class="material-icons">filter_drama</i>Ingredients</div>
+            <div class="collapsible-body">
+              <div class="row">
+                <div class="col s12">
+                  <div id="ingredients">
+                    <ul class="collection">
+                    <% recipe.ingredients.forEach(ingredient => { %>
+                      <li class="collection-item">
+                        <% if (ingredient.unit !== "count") { %>
+                          <p><%- `${ingredient.quantity} ${ingredient.unit} ${ingredient.name}` %>
+                        <% } else { %>
+                          <p><%- `${ingredient.quantity} ${ingredient.name}` %>
+                        <% } %>
+                      </li>
+                    <% }) %>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header"><i class="material-icons">place</i>Method</div>
+            <div class="collapsible-body">
+              <div class="row">
+                <div class="col s12">
+                  <div id="method">
+                    <ul class="collection">
+                    <% recipe.method.forEach((step, count) => { %>
+                      <li class="collection-item">
+                        <span class="title"><%- `${count+1}.` %><span>
+                        <p><%-  step %></p>
+                      </li>
+                    <% }) %>
+                    </ul>
+                  </div>
+                </div>
+            </div>
+          </li>
+        </ul>
         <div class="row">
-          <div class="col s4">
-            <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">av_timer</i><%- `${recipe.prepTime + recipe.cookTime}` %></p>
-          </div>
-          <div class="col s4">
-            <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">person</i><%- recipe.numServings %></p>
-          </div>
-          <div class="col s4">
-            <p class="valign-wrapper" style="justify-content:center"><i class="material-icons">attach_money</i><%- recipe.cost %></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col m6">
+          <div class="col m6 hide-on-small-only">
             <div id="ingredients">
               <ul class="collection">
               <% recipe.ingredients.forEach(ingredient => { %>
@@ -45,7 +94,7 @@
               </ul>
             </div>
           </div>
-          <div class="col m6">
+          <div class="col m6 hide-on-small-only">
             <div id="method">
               <ul class="collection">
               <% recipe.method.forEach((step, count) => { %>
@@ -61,6 +110,13 @@
 
       </div>
       <!--JavaScript at end of body for optimized loading-->
+      <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+      <script>
+      $('.collapsible').collapsible();
+      </script>
     </body>
 </html>
