--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -37,8 +37,8 @@
           </div>
         </div>
         <ul class="collapsible hide-on-med-and-up">
-          <li>
-            <div class="collapsible-header"><i class="material-icons">filter_drama</i>Ingredients</div>
+          <li class="active">
+            <div class="collapsible-header"><i class="material-icons">local_grocery_store</i>Ingredients</div>
             <div class="collapsible-body">
               <div class="row">
                 <div class="col s12">
@@ -60,7 +60,7 @@
             </div>
           </li>
           <li>
-            <div class="collapsible-header"><i class="material-icons">place</i>Method</div>
+            <div class="collapsible-header"><i class="material-icons">assignment</i>Method</div>
             <div class="collapsible-body">
               <div class="row">
                 <div class="col s12">
