navbor, favicon and logo

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,11 +1,11 @@
 <nav>
     <div class="nav-wrapper">
-      <a href="/recipes" class="brand-logo">MunchieMatcher</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="/recipes" class="brand-logo"><img style="height:100%" src="images/logo.png"><span class="hide-on-small-only" style="float:right">MunchieMatcher</span></a>
+      <!-- <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
       <ul class="right hide-on-med-and-down">
       </ul>
     </div>
   </nav>
 
-  <ul class="sidenav" id="mobile-demo">
-  </ul>
+  <!-- <ul class="sidenav" id="mobile-demo">
+  </ul> -->
