--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -5,6 +5,8 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
       <link rel="stylesheet" href="css/nouislider.min.css">
       <link rel="stylesheet" href="css/recipes.css">
+      <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+      <link rel="icon" href="images/favicon.ico" type="image/x-icon">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
