Keep source of each recipe

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -2,8 +2,8 @@
     <div class="nav-wrapper">
       <a href="/recipes" class="brand-logo"><img style="height:100%" src="images/logo.png"><span class="hide-on-small-only" style="float:right">MunchieMatcher</span></a>
       <!-- <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
-      <ul class="right hide-on-med-and-down">
-      </ul>
+      <!-- <ul class="right hide-on-med-and-down">
+      </ul> -->
     </div>
   </nav>
 
