--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -93,9 +93,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="input-field col s12">
+          <div class="input-field col s6">
             <input id="image" type="url"  name="image" class="validate">
             <label for="image">Recipe Image</label>
+          </div>
+          <div class="input-field col s6">
+            <input id="source" type="url"  name="source" class="validate">
+            <label for="source">Recipe Source</label>
           </div>
         </div>
         <div class="row">
