--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -16,12 +16,15 @@
         <!-- Page Content goes here -->
         <div id="recipeList">
           <div class="row nav-wrapper">
-            <div class="col s12">
+            <div class="col s12 m11">
               <div class="input-field">
                 <input id="search" type="search" class="search" placeholder="Search for a recipe!" required>
                 <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                 <i class="material-icons">close</i>
               </div>
+            </div>
+            <div class="col s12 m1 center-align" style="margin-top:0.75rem">
+              <a class="waves-effect waves-light btn" id="randomButton">random</a>
             </div>
           </div>
           <ul class="collapsible">
